--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "@11ty/eleventy": "^3.1.0"
   },
   "scripts": {
-    "build-ghpages": "npx @11ty/eleventy --pathprefix=/rsomonte.github.io/"
+    "build-ghpages": "npx @11ty/eleventy --pathprefix=/"
   }
 }
