--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.0"
   },
+  "devDependencies": {
+    "wasm-pack": "^0.13.1"
+  },
   "scripts": {
-    "build-ghpages": "npx @11ty/eleventy --pathprefix=/"
+    "build:wasm": "wasm-pack build ./filetype_wasm --target web --out-dir ../docs/pkg",
+    "build-ghpages": "npm run build:wasm && npx @11ty/eleventy --pathprefix=/"
   }
 }
