added a high contrast button to posts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/ufile_wasm/target/
-/ufile_wasm/pkg/
-/ufile_wasm/.wasm-pack
+/filetype_wasm/target/
+/filetype_wasm/pkg/
+/filetype_wasm/.wasm-pack
 /hasher_wasm/target/
 /hasher_wasm/pkg/
 /hasher_wasm/.wasm-pack
